[gd_scene load_steps=6 format=3 uid="uid://diuuhjqb3x8i5"]

[ext_resource type="Script" uid="uid://b0jt8i4m7bvka" path="res://3d_spawn.gd" id="1_co41o"]
[ext_resource type="Script" uid="uid://dremxwxr238qt" path="res://visualizer_3d.gd" id="1_gdvoy"]

[sub_resource type="Environment" id="Environment_1upsu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1upsu"]
albedo_color = Color(1, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_1upsu"]
material = SubResource("StandardMaterial3D_1upsu")
radius = 0.1
height = 0.2

[node name="3DSpawn" type="Node3D"]
script = ExtResource("1_co41o")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.711516, 0.245741, -0.658298, 0.12941, 0.875, 0.466506, 0.69065, -0.417117, 0.590776, -4.62359, 4.27724, -0.142116)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1upsu")

[node name="Visualizer3D" type="Node3D" parent="."]
script = ExtResource("1_gdvoy")

[node name="Point1" type="Node3D" parent="Visualizer3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -1.5, -3)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visualizer3D/Point1"]
mesh = SubResource("SphereMesh_1upsu")

[node name="Label3D" type="Label3D" parent="Visualizer3D/Point1"]
transform = Transform3D(0.64679, 0, -0.762668, 0, 1, 0, 0.762668, 0, 0.64679, 0, 0, 0.419403)
pixel_size = 0.01
offset = Vector2(0, -10)
text = "Point 1"

[node name="Point2" type="Node3D" parent="Visualizer3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 3.5, -12)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visualizer3D/Point2"]
mesh = SubResource("SphereMesh_1upsu")

[node name="Label3D" type="Label3D" parent="Visualizer3D/Point2"]
transform = Transform3D(0.64679, 0, -0.762668, 0, 1, 0, 0.762668, 0, 0.64679, 0, 0, 0.419403)
pixel_size = 0.01
offset = Vector2(0, 50)
text = "Point 2"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.571186, 0, -0.82082, 0, 1, 0, 0.82082, 0, 0.571186, 0, 0, 0)
